@@ -186,6 +186,7 @@ public class InstitutionServiceImpl implements InstitutionService {
         CreateInstitutionStrategy institutionStrategy = createInstitutionStrategyFactory.createInstitutionStrategyInfocamere(institution);
         return institutionStrategy.createInstitution(CreateInstitutionStrategyInput.builder()
                 .taxCode(institution.getTaxCode())
+                .description(institution.getDescription())
                 .build());
     }
     @Override
@@ -359,7 +360,7 @@ public class InstitutionServiceImpl implements InstitutionService {
     @Override
     public List<Institution> findInstitutionsByGeoTaxonomies(String geoTaxonomies, SearchMode searchMode) {
         List<String> geo = Arrays.stream(geoTaxonomies.split(","))
-                .filter(StringUtils::hasText).collect(Collectors.toList());
+                .filter(StringUtils::hasText).toList();
         validateGeoTaxonomies(geo, searchMode);
         return institutionConnector.findByGeotaxonomies(geo, searchMode);
     }
